[package]
name = "weather-clock"
version = "0.1.0"
edition = "2021"

[package.metadata.configure_me]
spec = "config_spec.toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.2"
actix-rt = "2.9.0"
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
configure_me = "0.4.0"
console-subscriber = "0.2.0"
crossterm = "0.27.0"
lazy_static = "1.4.0"
lcd = "0.4.1"
lcd-pcf8574 = "0.2.0"
ratatui = "0.26.0"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.32", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.36.0", features = ["sync"] }

[build-dependencies]
configure_me_codegen = "0.4.4"
